RESOLVED FIXED114847
StyledMarkupAccumulator::appendText() should not allocate an intermediary StringBuilder
https://bugs.webkit.org/show_bug.cgi?id=114847
Summary StyledMarkupAccumulator::appendText() should not allocate an intermediary Str...
Benjamin Poulain
Reported 2013-04-18 21:34:46 PDT
Why would you do that?
Attachments
Patch (2.17 KB, patch)
2013-04-18 21:41 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2013-04-18 21:41:24 PDT
Geoffrey Garen
Comment 2 2013-04-18 22:21:30 PDT
Comment on attachment 198795 [details] Patch r=me > Why would you do that? I didn't do it. commit-queue@webkit.org did! :)
Benjamin Poulain
Comment 3 2013-04-19 14:09:14 PDT
Comment on attachment 198795 [details] Patch Clearing flags on attachment: 198795 Committed r148770: <http://trac.webkit.org/changeset/148770>
Benjamin Poulain
Comment 4 2013-04-19 14:09:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.