StyledMarkupAccumulator::appendText() should not allocate an intermediary StringBuilder https://bugs.webkit.org/show_bug.cgi?id=114847

Reviewed by Geoffrey Garen.

For some reason StyledMarkupAccumulator::appendText() was allocating a separate buffer
for invoking appendStyleNodeOpenTag. This is a bad idea.

* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::appendStyleNodeOpenTag):
(WebCore::StyledMarkupAccumulator::appendText):


Canonical link: https://commits.webkit.org/133283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148770 268f45cc-cd09-0410-ab3c-d52691b4dbfc